# py-payload-service

./: .gitignore  README.md  openapi.yaml  payload-api.yaml
.github/: copilot-instructions.md
.github/workflows/: cicd.yml
app/: main.py
fastapi-server/: README.md  openapi.yaml  requirements.txt  setup.cfg
fastapi-server/.openapi-generator/: FILES
fastapi-server/src/openapi_server/: main.py
fastapi-server/src/openapi_server/apis/: payloads_api.py  payloads_api_base.py
fastapi-server/src/openapi_server/models/: error.py  get_all_payloads200_response.py  paginated_result.py  payload.py
fastapi-server/tests/: test_payloads_api.py
tests/: test_main.py
