[metadata]
name = openapi_server
version = v1.0.0
description = An API to manage transportation payload with the the following operations: * List all Payloads * Create a Payload (aka Route) * Get Payload Estimate * Update Payload with Actual * Delete a Payload  Features: * Result pagination * Security (Auth&#39;n / Auth&#39;z)  We will use a simple **Payload** resource representation with the following properties: * ID (Route, aka Flight) * Passengers (count) * Baggage (weight) * Cargo (weight) * EstimateDateTimestamp (optional) * LastUpdateTimestamp (optional) 
long_description = file: README.md
keywords = OpenAPI Payload API
python_requires = >= 3.7.*
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
install_requires = fastapi[all]
setup_requires = setuptools
package_dir = =src
packages = find_namespace:

[options.packages.find]
where = src
